# sfmlsnake

./: .gitignore  README.md  snake.sln  updatelogs.md
devfiles/: CMakeLists.txt
devfiles/source/: gameloop.cpp  leaderboardmenu.cpp  mainheader.h  mainmenu.cpp  mainmenuheader.h
snake/: RCa19220  README.md  README.txt  READMEdev.md  gameloop.cpp  mainheader.h  mainmenu.cpp  resource.h  resource1.h  resource2.h  snake.cpp  snake.rc  snake.vcxproj  snake.vcxproj.filters  snake1.rc  txtfiles.cpp
snake/source/: gameloop.cpp  gameloopgetplayername.cpp  leaderboardmenu.cpp  mainheader.h  mainmenu.cpp  mainmenufunctions.cpp  mainmenuheader.h  makefile  settingsmenu.cpp  snake.cpp  txtfiles.cpp
